sql-runner UI components modified

--- a/sql-runner/WebContent/WEB-INF/views/user.html
+++ b/sql-runner/WebContent/WEB-INF/views/user.html
@@ -90,6 +90,12 @@
 			<div class="iwr-form-panel">
 
 				<div class="notify hide notify-red"></div>
+			
+				<div class="menu">
+					<a href="logout?action=doLogout">Settings</a>
+					&nbsp;
+					<a href="logout?action=doLogout">Log off</a>
+				</div>
 
 				<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label
 					for="tab-1" class="tab">User Management</label>
@@ -109,12 +115,9 @@
 						</div>
 					</div>
 
-					<div class="float-left">
-						<div class="group">
-							<input type="radio" name="role" value="admin"
-								class="input mid-size" /> Admin <input type="radio" name="role"
-								value="user" class="input mid-size" /> User
-						</div>
+					<div class="float-left" style="line-height: 50px;">
+						<input type="radio" name="role" value="admin" class="input mid-size" /> Admin 
+						<input type="radio" name="role" value="user" class="input mid-size" /> User
 					</div>
 
 					<div class="float-left">
