--- a/sql-runner/WebContent/WEB-INF/views/index.html
+++ b/sql-runner/WebContent/WEB-INF/views/index.html
@@ -16,7 +16,7 @@
 		<div class="iwr-content-wrap">
 			<div class="iwr-form-panel">
 
-				<div class="notify hide notify-green"><%=${request.getParameter("message")"}%></div>
+				<div class="notify hide notify-green"></div>
 
 				<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label
 					for="tab-1" class="tab">Sign In</label>
@@ -43,6 +43,5 @@
 			</div>
 		</div>
 	</div>
-
 </body>
 </html>
