--- a/sql-runner/WebContent/WEB-INF/views/workspace.html
+++ b/sql-runner/WebContent/WEB-INF/views/workspace.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Day 001 Login Form</title>
+<title>SqlRunner - Workspace</title>
 <link rel="stylesheet" href="css/jquery.dataTables.min.css" />
 <link rel="stylesheet" href="css/scroller.dataTables.min.css" />
 <link rel="stylesheet" href="css/select.dataTables.min.css" />
